--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gradient_start">#7A00D3</color>
+    <color name="gradient_center">#1C0031</color>
+    <color name="gradient_end">#000000</color>
 </resources>
