--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -21,6 +21,7 @@
                 android:layout_width="@dimen/_44sdp"
                 android:layout_height="@dimen/_36sdp"
                 android:layout_above="@+id/mTVSong"
+                android:layout_marginLeft="@dimen/_18sdp"
                 android:layout_marginBottom="11dp"
                 android:clickable="false"
                 android:src="@drawable/ic_song" />
@@ -34,6 +35,7 @@
                 android:layout_marginBottom="@dimen/_23sdp"
                 android:clickable="false"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:text="Bài hát"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -52,6 +54,8 @@
                 android:id="@+id/mImgPlayList"
                 android:layout_width="@dimen/_44sdp"
                 android:layout_height="@dimen/_36sdp"
+                android:layout_marginLeft="@dimen/_18sdp"
+                android:layout_marginBottom="11dp"
                 android:layout_above="@+id/mTVPlaylist"
                 android:src="@drawable/ic_playlist" />
 
@@ -64,6 +68,7 @@
                 android:layout_marginBottom="@dimen/_23sdp"
                 android:gravity="center"
                 android:text="Playlist"
+                android:textColor="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold" />
     </RelativeLayout>
@@ -81,6 +86,8 @@
                 android:id="@+id/mImgAlbum"
                 android:layout_width="@dimen/_44sdp"
                 android:layout_height="@dimen/_36sdp"
+                android:layout_marginLeft="@dimen/_18sdp"
+                android:layout_marginBottom="11dp"
                 android:layout_above="@+id/mTVAlbum"
                 android:src="@drawable/ic_album" />
 
@@ -91,7 +98,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_23sdp"
-
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:text="Album"
                 android:textSize="25sp"
@@ -113,6 +120,8 @@
                 android:id="@+id/mImgFavourite"
                 android:layout_width="@dimen/_44sdp"
                 android:layout_height="@dimen/_36sdp"
+                android:layout_marginLeft="@dimen/_18sdp"
+                android:layout_marginBottom="11dp"
                 android:layout_above="@+id/mTVFavourite"
                 android:src="@drawable/ic_love" />
 
@@ -125,6 +134,7 @@
                 android:layout_marginBottom="@dimen/_23sdp"
                 android:gravity="center"
                 android:text="Yêu thích"
+                android:textColor="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold" />
     </RelativeLayout>
