--- a/app/src/main/res/layout/viewholder_music.xml
+++ b/app/src/main/res/layout/viewholder_music.xml
@@ -1,58 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardview"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginBottom="2dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="20dp"
-    tools:ignore="MissingDefaultResource">
-
-    <LinearLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="2dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="20dp"
+        tools:ignore="MissingDefaultResource">
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            app:riv_corner_radius="@dimen/_10sdp"
-            android:scaleType="fitXY"
-            app:riv_mutate_background="true"
-            android:id="@+id/imageAlbum"
-            android:layout_width="@dimen/_60sdp"
-            android:layout_height="@dimen/_60sdp"
-            android:src="@drawable/ic_launcher_background"
-            app:riv_border_color="#FF000000"
-            app:riv_border_width="0.01dp" />
-
-        <LinearLayout
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_gravity="center"
+    <RelativeLayout
+            android:layout_toLeftOf="@id/relaOption"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tvTitle"
+        <androidx.cardview.widget.CardView
+                android:id="@+id/cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="Tên bài hát"
-                android:textColor="#000"
-                android:textSize="15sp" />
+                app:cardElevation="4dp">
 
-            <TextView
-                android:id="@+id/tvDuration"
-                android:layout_width="match_parent"
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#00000000"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
+
+                <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/imageAlbum"
+                        android:layout_width="@dimen/_60sdp"
+                        android:layout_height="@dimen/_60sdp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_launcher_background"
+                        app:riv_border_color="#FF000000"
+                        app:riv_border_width="0.01dp"
+                        app:riv_corner_radius="@dimen/_10sdp"
+                        app:riv_mutate_background="true" />
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:orientation="vertical">
+
+                    <TextView
+                            android:id="@+id/tvTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
+                            android:maxLines="2"
+                            android:text="Tên bài hát"
+                            android:textColor="#000"
+                            android:textSize="15sp" />
+
+                    <TextView
+                            android:id="@+id/tvDuration"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Tên bài hát"
+                            android:textColor="#000"
+                            android:textSize="13sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
+    <RelativeLayout
+            android:id="@+id/relaOption"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_width="50dp"
+            android:layout_height="50dp">
+        <ImageView
+                android:layout_marginRight="20dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tên bài hát"
-                android:textColor="#000"
-                android:textSize="13sp" />
-        </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+                android:scaleType="fitXY"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:elevation="@dimen/_15sdp"
+                android:src="@drawable/icon_sel" />
+    </RelativeLayout>
+
+
+</RelativeLayout>
