--- a/app/src/main/res/layout/notification_push.xml
+++ b/app/src/main/res/layout/notification_push.xml
@@ -1,80 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:background="#EFEEEE"
-    android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#EFEEEE">
 
     <ImageView
-        android:layout_margin="@dimen/_15sdp"
-        android:id="@+id/mIVAlbum"
-        android:layout_width="@dimen/_50sdp"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginEnd="@dimen/_10sdp" />
+            android:id="@+id/mIVAlbum"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_margin="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_10sdp" />
 
     <TextView
-        android:layout_marginTop="@dimen/_15sdp"
-        android:id="@+id/mTvName"
-        style="@style/TextAppearance.Compat.Notification.Time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_4sdp"
-        android:layout_toEndOf="@id/mIVAlbum"
-        android:text="@string/app_name" />
+            android:id="@+id/mTvName"
+            style="@style/TextAppearance.Compat.Notification.Time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginBottom="@dimen/_4sdp"
+            android:layout_toEndOf="@id/mIVAlbum"
+            android:text="@string/app_name" />
 
     <TextView
-        android:layout_below="@id/mTvName"
-        android:id="@+id/mTvTitle"
-        style="@style/TextAppearance.Compat.Notification.Title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_5sdp"
-        android:layout_toEndOf="@id/mIVAlbum"
-        android:text="@string/app_name" />
+            android:id="@+id/mTvTitle"
+            style="@style/TextAppearance.Compat.Notification.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/mTvName"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:layout_toEndOf="@id/mIVAlbum"
+            android:text="@string/app_name" />
 
     <TextView
-        android:id="@+id/mTvDurection"
-        style="@style/TextAppearance.Compat.Notification.Info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mTvTitle"
-        android:layout_marginBottom="@dimen/_4sdp"
-        android:layout_toEndOf="@id/mIVAlbum"
-        android:text="@string/app_name" />
+            android:id="@+id/mTvDurection"
+            style="@style/TextAppearance.Compat.Notification.Info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/mTvTitle"
+            android:layout_marginBottom="@dimen/_4sdp"
+            android:layout_toEndOf="@id/mIVAlbum"
+            android:text="@string/app_name" />
 
 
     <LinearLayout
-        android:backgroundTint="#ccc"
-        android:id="@+id/mLL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mIVAlbum"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:background="@drawable/lineborder"
-        android:gravity="center"
-        android:weightSum="5">
+            android:id="@+id/mLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/mIVAlbum"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:background="@drawable/lineborder"
+            android:backgroundTint="#ccc"
+            android:gravity="center"
+            android:weightSum="5">
 
         <ImageView
-            android:id="@+id/mPrevious"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+                android:id="@+id/mPrevious"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
         <ImageView
-            android:id="@+id/mPause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+                android:id="@+id/mPause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
         <ImageView
-            android:id="@+id/mNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+                android:id="@+id/mNext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
         <ImageView
-            android:id="@+id/mClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" />
+                android:id="@+id/mClose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
     </LinearLayout>
 </RelativeLayout>
