--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -53,15 +53,17 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp" />
 
-            <Button
-                    android:id="@+id/btn_delete_search"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="56dp"
-                    android:layout_marginRight="56dp"
-                    android:layout_marginBottom="5dp"
-                    android:background="@drawable/border_btn_delete"
-                    android:text="XÓA CÁC TÌM KIẾM" />
         </LinearLayout>
+
+        <Button
+                android:id="@+id/btn_delete_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="56dp"
+                android:layout_marginRight="56dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/border_btn_delete"
+                android:text="XÓA CÁC TÌM KIẾM" />
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
