--- a/app/src/main/res/layout/viewholder_music.xml
+++ b/app/src/main/res/layout/viewholder_music.xml
@@ -9,11 +9,12 @@
     android:layout_marginRight="5dp"
     android:layout_marginBottom="2dp"
     app:cardCornerRadius="10dp"
-    app:cardElevation="20dp">
+    app:cardElevation="@dimen/_20sdp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview"
             android:layout_width="match_parent"
@@ -22,10 +23,10 @@
             app:cardElevation="4dp">
 
             <LinearLayout
-                android:padding="@dimen/_10sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="@dimen/_10sdp">
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/imageAlbum"
@@ -38,11 +39,11 @@
                     app:riv_corner_radius="@dimen/_10sdp" />
 
                 <LinearLayout
-                    android:layout_marginRight="@dimen/_50sdp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_50sdp"
                     android:orientation="vertical">
 
                     <TextView
@@ -68,12 +69,12 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:paddingEnd="@dimen/_10sdp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
         android:id="@+id/relaOption"
-        android:layout_width="50dp"
-        android:layout_height="50dp">
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:paddingEnd="@dimen/_10sdp">
 
         <ImageView
             android:layout_width="wrap_content"
