--- a/app/src/main/res/layout/dialog_option_mi.xml
+++ b/app/src/main/res/layout/dialog_option_mi.xml
@@ -1,108 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00000000"
-        android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#00000000"
+    android:orientation="vertical">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
-                android:id="@+id/imageAlbum"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_35sdp"
-                android:layout_marginLeft="@dimen/_17sdp"
-                app:cardBackgroundColor="#000000"
-                app:cardCornerRadius="@dimen/_10sdp">
+            android:id="@+id/imageAlbum"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginLeft="@dimen/_17sdp"
+            app:cardBackgroundColor="#000000"
+            app:cardCornerRadius="@dimen/_10sdp">
 
             <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/bg_musicerror" />
+                android:id="@+id/mIVAlbum"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/bg_musicerror" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_18sdp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="Tên Bài Hát"
+                android:textColor="#000000"
+                android:textSize="@dimen/_14sdp" />
+
+            <TextView
+                android:id="@+id/tvSinger"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/_15sdp"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tên Bài Hát"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/_14sdp" />
-
-            <TextView
-                    android:id="@+id/tvSinger"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Tên Ca sỹ"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/_10sdp" />
+                android:maxLines="1"
+                android:text="Tên Ca sỹ"
+                android:textColor="#000000"
+                android:textSize="@dimen/_10sdp" />
         </LinearLayout>
     </LinearLayout>
 
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:layout_marginLeft="@dimen/_18sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginRight="@dimen/_18sdp"
-            android:background="#80302F2F" />
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginLeft="@dimen/_18sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_18sdp"
+        android:background="#80302F2F" />
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_17sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvAddSong"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_17sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:drawableLeft="@drawable/ic_add_song"
+            android:drawablePadding="@dimen/_10sdp"
+            android:gravity="center_vertical"
+            android:text="Thêm vào Playlist"
+            android:textColor="#000000"
+            android:textSize="@dimen/_14sdp" />
+
+        <TextView
+            android:id="@+id/tvAddLove"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
-            android:orientation="vertical">
+            android:drawableLeft="@drawable/ic_add_love"
+            android:drawablePadding="@dimen/_10sdp"
+            android:gravity="center_vertical"
+            android:text="Thêm vào Yêu Thích"
+            android:textColor="#000000"
+            android:textSize="@dimen/_14sdp" />
 
         <TextView
-                android:id="@+id/tvAddSong"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:drawableLeft="@drawable/ic_add_song"
-                android:drawablePadding="@dimen/_10sdp"
-                android:gravity="center_vertical"
-                android:text="Thêm vào Playlist"
-                android:textColor="#000000"
-                android:textSize="@dimen/_14sdp" />
-
-        <TextView
-                android:id="@+id/tvAddLove"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:drawableLeft="@drawable/ic_add_love"
-                android:drawablePadding="@dimen/_10sdp"
-                android:gravity="center_vertical"
-                android:text="Thêm vào Yêu Thích"
-                android:textColor="#000000"
-                android:textSize="@dimen/_14sdp" />
-
-        <TextView
-                android:id="@+id/tvAddDeleteSong"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="10dp"
-                android:drawableLeft="@drawable/ic_add_delete_song"
-                android:drawablePadding="@dimen/_10sdp"
-                android:gravity="center_vertical"
-                android:text="Xóa bài hát"
-                android:textColor="#000000"
-                android:textSize="@dimen/_14sdp" />
+            android:id="@+id/tvAddDeleteSong"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="10dp"
+            android:drawableLeft="@drawable/ic_add_delete_song"
+            android:drawablePadding="@dimen/_10sdp"
+            android:gravity="center_vertical"
+            android:text="Xóa bài hát"
+            android:textColor="#000000"
+            android:textSize="@dimen/_14sdp" />
     </LinearLayout>
 </LinearLayout>
