--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -1,66 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.fragment.library.favourite.FavouriteFragment">
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".ui.fragment.library.favourite.FavouriteFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/background">
+        android:background="@drawable/background">
 
         <LinearLayout
-                android:id="@+id/linnertoolbar"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="vertical">
+            android:id="@+id/linnertoolbar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="vertical">
 
             <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="59dp"
-                    android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="59dp"
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.Toolbar
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="#00000000">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#00000000">
 
                     <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/ic_back" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_back" />
 
                     <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:drawableRight="@drawable/ic_point"
-                            android:text="Yêu Thích"
-                            android:paddingRight="18dp"
-                            android:textColor="#FFFFFF"
-                            android:textSize="24sp"/>
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawableRight="@drawable/ic_point"
+                        android:gravity="center"
+                        android:paddingRight="18dp"
+                        android:text="Yêu Thích"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
                 </androidx.appcompat.widget.Toolbar>
             </LinearLayout>
         </LinearLayout>
+
         <androidx.cardview.widget.CardView
-                android:id="@+id/btn_Favourite"
-                app:cardCornerRadius="15dp"
-                app:cardBackgroundColor="#00ff38"
-                android:layout_marginLeft="80dp"
-                android:layout_marginRight="80dp"
-                android:layout_below="@id/linnertoolbar"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                >
+            android:id="@+id/btn_Favourite"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@id/linnertoolbar"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp"
+            app:cardBackgroundColor="#00ff38"
+            app:cardCornerRadius="15dp">
+
             <TextView
-                    android:textColor="#FFFFFF"
-                    android:gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="PHÁT NGẪU NHIÊN" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="PHÁT NGẪU NHIÊN"
+                android:textColor="#FFFFFF" />
         </androidx.cardview.widget.CardView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mReCyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/btn_Favourite"
+            android:layout_marginTop="@dimen/_10sdp" />
+        <TextView
+            android:id="@+id/mTVNullSongs"
+            android:layout_centerInParent="true"
+            android:text="Không có bài hát nào"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
 </FrameLayout>
