--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -26,7 +26,7 @@
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Playlist"/>
+                android:text="Bài hát"/>
         </androidx.appcompat.widget.Toolbar>
     </RelativeLayout>
 
