--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,69 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-                android:id="@+id/linnertoolbar"
-                android:layout_width="match_parent"
-                android:layout_height="60dp">
+            android:id="@+id/linnertoolbar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
 
             <androidx.appcompat.widget.Toolbar
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#575353">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#575353">
 
-                <androidx.appcompat.widget.SearchView
-                        android:id="@+id/searchViewItem"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:background="@drawable/border_search"
-                        android:backgroundTint="@color/white"
-                        android:padding="5dp"
-                        app:queryHint="Tìm bài hát, playlist ..." />
+                <TextView
+                    android:id="@+id/searchViewItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:background="@drawable/border_search"
+                    android:backgroundTint="@color/white"
+                    android:drawableLeft="@drawable/ic_search"
+                    android:padding="5dp"
+                    app:defaultQueryHint="Tìm bài hát, playlist ..." />
             </androidx.appcompat.widget.Toolbar>
         </LinearLayout>
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/linnertoolbar"
-                android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/btn_delete_search"
+            android:layout_below="@id/linnertoolbar"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:orientation="vertical">
 
             <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/homeTB"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="15dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Các tìm kiếm gần đây"
-                    android:textColor="#FFFFFF"
-                    android:textSize="15sp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/homeTB"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="Các tìm kiếm gần đây"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/search_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp" />
+                android:id="@+id/search_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp" />
 
         </LinearLayout>
 
         <Button
-                android:id="@+id/btn_delete_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="56dp"
-                android:layout_marginRight="56dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/border_btn_delete"
-                android:text="XÓA CÁC TÌM KIẾM" />
+            android:id="@+id/btn_delete_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="56dp"
+            android:layout_marginRight="56dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/border_btn_delete"
+            android:text="XÓA CÁC TÌM KIẾM" />
     </RelativeLayout>
 </RelativeLayout>
