--- a/app/src/main/res/layout/viewholder_music.xml
+++ b/app/src/main/res/layout/viewholder_music.xml
@@ -77,6 +77,7 @@
         android:paddingEnd="@dimen/_10sdp">
 
         <ImageView
+            android:id="@+id/mIVDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
