--- a/app/src/main/res/layout/viewholder_playlist.xml
+++ b/app/src/main/res/layout/viewholder_playlist.xml
@@ -8,6 +8,8 @@
         android:id="@+id/mLLClick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toStartOf="@id/mIVDelete"
+        android:clickable="false"
         android:orientation="horizontal"
         android:padding="@dimen/_10sdp">
 
@@ -26,7 +28,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_50sdp"
             android:orientation="vertical">
 
             <TextView
