--- a/app/src/main/res/layout/fragment_play_list.xml
+++ b/app/src/main/res/layout/fragment_play_list.xml
@@ -22,6 +22,7 @@
             android:textSize="20sp" />
 
         <ImageView
+            android:clickable="true"
             android:id="@+id/mIVBack"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -46,13 +47,13 @@
         android:layout_below="@id/mRltBack" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/mTVNullPlayList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="Không có PlayList nào"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
